--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/causa.html">Causa</a>
+    <a href="recipes/html/causa.html">Causa</a>
 </body>
 
 </html>
