--- a/recipes/html/causa.html
+++ b/recipes/html/causa.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
+    <a href="../../index.html">Home</a>
     <h1>Causa</h1>
+    <img src="../images/causa.jpg" alt="Causa">
 </body>
 
 </html>
