--- a/recipes/html/causa.html
+++ b/recipes/html/causa.html
@@ -10,7 +10,57 @@
 <body>
     <a href="../../index.html">Home</a>
     <h1>Causa</h1>
-    <img src="../images/causa.jpg" alt="Causa">
+    <img src="../images/causa.webp" alt="Causa">
+    <h3>Description:</h3>
+    <p>This layered Peruvian potato and chicken salad is called "causa rellena" in Peru. There's nothing very unusual
+        about serving a chicken or potato salad at a cookout but this beautiful layered salad is sure to cause a stir!
+        Perfect for making ahead and packing in your cooler on a hot summer day. Garnish with cherry tomatoes and
+        cilantro if desired.</p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1 large cooked chicken breast, diced or shredded</li>
+        <li>¼ cup green peas</li>
+        <li>¼ cup diced cooked carrot</li>
+        <li>1 teaspoon minced shallot</li>
+        <li>2 tablespoons finely chopped roasted red peppers</li>
+        <li>2 tablespoons chopped fresh cilantro</li>
+        <li>1 teaspoon lime juice</li>
+        <li>¼ cup mayonnaise, or as needed</li>
+        <li>1 ¼ pounds Yukon Gold potatoes, peeled and quartered</li>
+        <li>2 tablespoons aji amarillo chili paste, or to taste</li>
+        <li>2 tablespoons olive oil</li>
+        <li>1 lime, juiced, or more to taste</li>
+        <li>cayenne pepper to taste</li>
+        <li>salt to taste</li>
+        <li>1 avocado, quartered and sliced</li>
+        <li>⅓ cup mayonnaise</li>
+        <li>1 tablespoon sour cream (Optional)</li>
+        <li>1 small clove garlic, crushed</li>
+        <li>2 teaspoons aji amarillo chili paste, or to taste</li>
+        <li>1 teaspoon water as needed</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Combine chicken, green peas, carrot, shallot, roasted red peppers, cilantro, and lime juice in a bowl.
+            Season with salt and cayenne. Add mayonnaise and mix until combined. Cover chicken salad with plastic wrap
+            and refrigerate until ready to use. </li>
+        <li>Place potatoes into a pot and cover with salted water; bring to a boil. Reduce heat to medium-low and simmer
+            until very tender but not falling apart, about 20 minutes. Drain well and transfer potatoes to a mixing
+            bowl. Mash until smooth. </li>
+        <li>Add ají amarillo, olive oil, and lime juice to the potatoes. Season with cayenne and salt. Mash together
+            with a potato masher. Switch to a spatula and mix until completely smooth.</li>
+        <li>Line four 6-ounce ramekins with plastic wrap. Scoop mashed potatoes evenly into ramekins; press and smooth
+            out the tops. Cover each with a layer of avocado slices. Fill each ramekin to the top with chicken salad,
+            pressing it down and pulling up the plastic wrap to eliminate any air pockets. Cover with a final layer of
+            mashed potatoes, going up to 1/2 inch or more over the rim. </li>
+        <li>Seal top with a new layer of plastic wrap and fold the sides over to seal. Refrigerate salads until
+            completely chilled, at least 1 hour. </li>
+        <li>Mix mayonnaise, sour cream, garlic, and ají amarillo together for the sauce, adding a splash of water to
+            adjust the thickness. </li>
+        <li>Remove the top layer of plastic wrap from each salad. Invert each ramekin onto a serving plate; remove
+            ramekins, then plastic wrap. Spoon some sauce around each salad. </li>
+
+    </ol>
 </body>
 
 </html>
