--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes (Extracted from <a href="https://www.allrecipes.com">allrecipes.com</a>)</h1>
+    <ul>
+        <li><a href="recipes/html/causa.html">Causa</a></li>
+        <li><a href="recipes/html/lomo-saltado.html">Lomo Saltado</a></li>
+    </ul>
 
-    <a href="recipes/html/causa.html">Causa</a>
 </body>
 
 </html>
