add papa rellena whole recipe and its reference on the index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="recipes/html/causa.html">Causa</a></li>
         <li><a href="recipes/html/lomo-saltado.html">Lomo Saltado</a></li>
+        <li><a href="recipes/html/papas-rellenas.html">Papa Rellena</a></li>
     </ul>
 
 </body>
